# VkBindingBenchmark

./: .gitignore  .gitmodules  CMakeLists.txt  FindAssimp.cmake  README.md
ShaderPipeline/: CMakeLists.txt  cmake_main.cpp  filesystem_utils.h  shaderdata.h  string_utils.h
VkBindingBenchmark/: CMakeLists.txt  Common.h  config.h  debug.h  file_utils.cpp  file_utils.h  main.cpp  mesh_loading.cpp  os_sdl2.h  rendering.cpp  rendering.h  state.h  timing.h  vkh.cpp  vkh.h  vkh_alloc.h  vkh_material.h  vkh_setup.h  vkh_types.h
